[project]
name = "deep-rl-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ale-py>=0.11.1",
    "gymnasium[toy-text]>=1.1.1",
    "matplotlib>=3.10.3",
    "opencv-python>=4.11.0.86",
    "torch>=2.7.1",
    "torchaudio>=2.7.1",
    "torchvision>=0.22.1",
]
